# msgspec_ref

./: .gitignore  pyproject.toml
msgspec_learning/: example_reqs.py  main.py
msgspec_learning/lib/: constants.py
msgspec_learning/schemas/: base.py  example_models.py  request_models.py
msgspec_learning/utils/requests_util/: cache_handler.py  client.py  encode_decode.py
