[tool.poetry]
name = "msgspec-learning"
version = "0.1.0"
description = ""
authors = ["redjax <jackenyon@gmail.com>"]
readme = "README.md"
packages = [{include = "msgspec_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
msgspec = "^0.14.1"
requests-cache = "^1.0.1"
typer = "^0.7.0"
rich = "^13.3.4"
stackprinter = "^0.2.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
